--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^2.4.0
   shared_preferences: ^2.0.6
   http: ^0.13.3
+  firebase_core: ^1.4.0
 
 dev_dependencies:
   flutter_test:
