--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.3
   firebase_core: ^1.4.0
   splash_screen_view: ^3.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
