--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
     - Images/
     - Images/T-Shirt.jpg
     - Images/brunch1.png
+    - Images/login.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
