--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_core: ^1.4.0
   splash_screen_view: ^3.0.0
   provider: ^5.0.0
+  image_picker: ^0.8.1
 
 dev_dependencies:
   flutter_test:
